--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv="x-ua-compatible" content="IE=edge">
+  <link rel="shortcut icon" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width,height=device-height, user-scalable=no" />
   <title>Properties Editor</title>
   <meta name="description" content="Online properties file editor">
