upgrade to GA-4

--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/encdec.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164009421-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MYXQ3EPJND"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-164009421-1');
+    gtag('config', 'G-MYXQ3EPJND');
   </script>
 </head>
 
