--- a/encdec.html
+++ b/encdec.html
@@ -10,6 +10,14 @@
   <link rel="stylesheet" href="css/properties-editor.css" />
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MYXQ3EPJND"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-MYXQ3EPJND');
+</script>
 
 <body>
   <h1>EncDec lib</h1>
@@ -127,6 +135,7 @@
     </tr>
   </table>
   <div id="log"></div>
+  <div class="footnote">This page collects anonymous usage statistics. Passwords and texts (clear and encrypted) never leave your browser</div>
   <script src="js/encdec.js"></script>
   <script>
 
