upgrade jquery. add github icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Online properties file editor">
   <link rel="stylesheet" href="css/fontello.css" />
   <link rel="stylesheet" href="css/properties-editor.css" />
-  <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-3.6.4.min.js"></script>
   <script src="js/encdec.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MYXQ3EPJND"></script>
@@ -24,7 +24,7 @@
     Properties Editor <i class="icon icon-shield"></i>
     <span id="about">
       <a href="https://github.com/opoto/properties-editor/blob/master/README.md">
-        <i class="icon icon-info-circled"></i>
+        <img alt="GitHub icon" src="img/github-mark.svg"/>
       </a>
     </span>
   </h1>
@@ -209,7 +209,7 @@
       <i id="copy-posted-url" class="icon icon-clone" title="Copy url to clipboard"></i>
     </div>
     <div>Or scan QR Code:</div>
-    <img src="" />
+    <img alt="QR code" src="" />
   </div>
 
   <h2>Editor
