--- a/encdec.html
+++ b/encdec.html
@@ -319,10 +319,11 @@
       if (apiToken) {
         post.headers["Authorization"] = "Bearer " + apiToken;
       }
+      $("#post-button")[0].setAttribute("disabled", "disabled");
       try {
         /* */
         const response = await fetch("https://dpaste.com/api/v2/", post);
-        let fileUrl = await response.text();
+        let fileUrl = await response.text() + ".txt";
         /* */
         //const fileUrl = "testing";
         $(".post-result").show();
@@ -336,13 +337,15 @@
         $("#post-fileurl")[0].setAttribute("disabled", "disabled");
         $("#post-fileurl").after("Copied to clipboard");
         // display QR Code
-        $("#post-qrcode").attr("src", "https://api.qrserver.com/v1/create-qr-code/?size=200x200&bgcolor=fff&data=>" + encodeURIComponent(fileUrl));
+        $("#post-qrcode").attr("src", "https://api.qrserver.com/v1/create-qr-code/?size=200x200&bgcolor=fff&data=" + encodeURIComponent(fileUrl));
         $("#post-qrcode").hide();
         $("#post-hideQr").addClass("hidden");
         $("#post-help").hide();
       } catch (error) {
         $("#post-status").text(error);
       }
+      $("#post-button")[0].removeAttribute("disabled");
+
       setTimeout(() => $("#post-status").text(""), 2000);
     });
 
